--- a/index.html
+++ b/index.html
@@ -2,113 +2,149 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Statut des serveurs - Throne and Liberty</title>
+  <title>Tableau des Serveurs - Throne & Liberty</title>
   <link rel="icon" href="https://upload.wikimedia.org/wikipedia/fr/c/c4/Throne_and_Liberty_Logo.png">
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');
+
     body {
       margin: 0;
-      font-family: 'Amazon Ember', Arial, sans-serif;
-      background: linear-gradient(#0e0e0e, #1f1f1f);
-      color: #fbf9f7;
       padding: 2rem;
+      font-family: 'MedievalSharp', serif;
+      background: radial-gradient(circle at top, #161616, #000);
+      color: #f0e6d2;
       text-align: center;
     }
+
     h1 {
       font-size: 2.5rem;
       margin-bottom: 1rem;
       text-transform: uppercase;
-      letter-spacing: 2px;
+      letter-spacing: 3px;
+      color: #d4af37;
+      text-shadow: 0 0 5px #000;
     }
-    .server {
+
+    .server-grid {
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
-      align-items: center;
       gap: 1rem;
-      margin: 1rem auto;
-      max-width: 600px;
-      background-color: #2c2c2c;
-      padding: 1rem;
-      border-radius: 8px;
+    }
+
+    .server-card {
+      background-color: rgba(36, 36, 36, 0.9);
+      border: 2px solid #d4af37;
+      border-radius: 10px;
       box-shadow: 0 0 10px #000;
+      padding: 1rem;
+      width: 300px;
+      text-align: left;
+      transition: transform 0.2s ease-in-out;
     }
-    .status-icon {
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
+
+    .server-card:hover {
+      transform: scale(1.03);
     }
-    .online    { background-color: #28a745; }
-    .crowded   { background-color: #ffc107; }
-    .full      { background-color: #fd7e14; }
-    .maintenance { background-color: #dc3545; }
-    .label {
-      font-size: 1.2rem;
+
+    .server-name {
+      font-size: 1.4rem;
       font-weight: bold;
-      text-transform: capitalize;
+      color: #ffd700;
+    }
+
+    .badge {
+      display: inline-block;
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      margin-right: 8px;
+    }
+
+    .online       { background-color: #28a745; }
+    .crowded      { background-color: #ffc107; }
+    .full         { background-color: #fd7e14; }
+    .maintenance  { background-color: #dc3545; }
+
+    .server-info {
+      font-size: 0.95rem;
+      margin-top: 0.5rem;
+      line-height: 1.5;
+    }
+
+    .timestamp {
+      margin-top: 1.5rem;
+      font-size: 0.9rem;
+      opacity: 0.7;
     }
   </style>
 </head>
 <body>
-  <h1>Statut des serveurs Throne and Liberty</h1>
-  <div id="servers">Chargement des serveurs...</div>
+  <h1>Serveurs Throne & Liberty</h1>
+  <div id="servers" class="server-grid">Chargement...</div>
+  <div id="timestamp" class="timestamp"></div>
 
   <script>
-    const statusMap = {
-      "en ligne": "online",
-      "forte affluence": "crowded",
-      "plein": "full",
-      "en cours de maintenance": "maintenance"
+    const statusColors = {
+      "maintenance": "maintenance",
+      "online": "online",
+      "busy": "crowded",
+      "full": "full"
     };
 
-    async function fetchStatus() {
+    async function loadServers() {
       try {
-        const proxyUrl = "https://api.allorigins.win/get?url=";
-        const targetUrl = encodeURIComponent("https://www.playthroneandliberty.com/fr-fr/support/server-status");
-        const response = await fetch(`${proxyUrl}${targetUrl}`);
-        const { contents } = await response.json();
+        const proxy = "https://api.allorigins.win/get?url=";
+        const url = encodeURIComponent("https://fr.tldb.info/server-status");
+        const res = await fetch(`${proxy}${url}`);
+        const data = await res.json();
+        const html = data.contents;
 
         const parser = new DOMParser();
-        const doc = parser.parseFromString(contents, "text/html");
+        const doc = parser.parseFromString(html, "text/html");
+        const rows = [...doc.querySelectorAll("tr")].filter(row => row.querySelector("td"));
 
-        const serverLabels = [
-          "Judgment", "Obsidian", "Talon", "Paola", "Zephyr",
-          "Cascade", "Rebellion", "Fortune", "Destiny",
-          "Arcane", "Emerald", "Conviction"
-        ];
+        const container = document.getElementById("servers");
+        container.innerHTML = "";
 
-        const serversDiv = document.getElementById("servers");
-        serversDiv.innerHTML = "";
+        rows.forEach(row => {
+          const cells = row.querySelectorAll("td");
+          const world = cells[0]?.textContent.trim();
+          const region = cells[1]?.textContent.trim();
+          const weather = cells[2]?.textContent.trim();
+          const players = cells[3]?.textContent.trim();
+          const statusText = cells[4]?.textContent.trim().toLowerCase();
 
-        serverLabels.forEach(name => {
-          const items = [...doc.querySelectorAll(".ags-ServerStatus-content-serverStatuses-server-item")];
-          const match = items.find(item => item.textContent.toLowerCase().includes(name.toLowerCase()));
+          const statusClass = statusColors[statusText] || "maintenance";
 
-          if (match) {
-            const status = Object.keys(statusMap).find(k => match.textContent.toLowerCase().includes(k));
-            const statusClass = statusMap[status] || "maintenance";
+          const card = document.createElement("div");
+          card.className = "server-card";
 
-            const div = document.createElement("div");
-            div.className = "server";
+          card.innerHTML = `
+            <div class="server-name">
+              <span class="badge ${statusClass}"></span>${world}
+            </div>
+            <div class="server-info">
+              🌍 <strong>Région :</strong> ${region}<br>
+              🧙 <strong>Météo magique :</strong> ${weather}<br>
+              🧑‍🤝‍🧑 <strong>Joueurs :</strong> ${players}<br>
+              📶 <strong>Statut :</strong> ${statusText.charAt(0).toUpperCase() + statusText.slice(1)}
+            </div>
+          `;
 
-            const icon = document.createElement("div");
-            icon.className = `status-icon ${statusClass}`;
-
-            const label = document.createElement("span");
-            label.className = "label";
-            label.textContent = `${name} – ${status || "Statut inconnu"}`;
-
-            div.appendChild(icon);
-            div.appendChild(label);
-            serversDiv.appendChild(div);
-          }
+          container.appendChild(card);
         });
+
+        const now = new Date();
+        document.getElementById("timestamp").textContent = `⏱️ Dernière mise à jour : ${now.toLocaleTimeString()}`;
       } catch (e) {
-        document.getElementById("servers").textContent = "❌ Impossible de charger les statuts.";
+        document.getElementById("servers").textContent = "❌ Impossible de charger les serveurs.";
         console.error(e);
       }
     }
 
-    fetchStatus();
-    setInterval(fetchStatus, 300000); // toutes les 5 minutes
+    loadServers();
+    setInterval(loadServers, 300000); // Rafraîchit toutes les 5 min
   </script>
 </body>
 </html>
