--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Tableau des Serveurs - Throne & Liberty</title>
+  <title>Serveurs Throne & Liberty</title>
   <link rel="icon" href="https://upload.wikimedia.org/wikipedia/fr/c/c4/Throne_and_Liberty_Logo.png">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');
@@ -62,7 +62,7 @@
     }
 
     .online       { background-color: #28a745; }
-    .crowded      { background-color: #ffc107; }
+    .busy         { background-color: #ffc107; }
     .full         { background-color: #fd7e14; }
     .maintenance  { background-color: #dc3545; }
 
@@ -85,50 +85,28 @@
   <div id="timestamp" class="timestamp"></div>
 
   <script>
-    const statusColors = {
-      "maintenance": "maintenance",
-      "online": "online",
-      "busy": "crowded",
-      "full": "full"
-    };
-
     async function loadServers() {
       try {
-        const proxy = "https://api.allorigins.win/get?url=";
-        const url = encodeURIComponent("https://fr.tldb.info/server-status");
-        const res = await fetch(`${proxy}${url}`);
-        const data = await res.json();
-        const html = data.contents;
-
-        const parser = new DOMParser();
-        const doc = parser.parseFromString(html, "text/html");
-        const rows = [...doc.querySelectorAll("tr")].filter(row => row.querySelector("td"));
-
+        const response = await fetch("https://throneandliberty.gameslantern.com/api/server-status");
+        const data = await response.json();
         const container = document.getElementById("servers");
         container.innerHTML = "";
 
-        rows.forEach(row => {
-          const cells = row.querySelectorAll("td");
-          const world = cells[0]?.textContent.trim();
-          const region = cells[1]?.textContent.trim();
-          const weather = cells[2]?.textContent.trim();
-          const players = cells[3]?.textContent.trim();
-          const statusText = cells[4]?.textContent.trim().toLowerCase();
-
-          const statusClass = statusColors[statusText] || "maintenance";
-
+        data.servers.forEach(server => {
           const card = document.createElement("div");
           card.className = "server-card";
 
+          const statusClass = server.status.toLowerCase();
+
           card.innerHTML = `
             <div class="server-name">
-              <span class="badge ${statusClass}"></span>${world}
+              <span class="badge ${statusClass}"></span>${server.name}
             </div>
             <div class="server-info">
-              🌍 <strong>Région :</strong> ${region}<br>
-              🧙 <strong>Météo magique :</strong> ${weather}<br>
-              🧑‍🤝‍🧑 <strong>Joueurs :</strong> ${players}<br>
-              📶 <strong>Statut :</strong> ${statusText.charAt(0).toUpperCase() + statusText.slice(1)}
+              🌍 <strong>Région :</strong> ${server.region}<br>
+              🌦️ <strong>Météo magique :</strong> ${server.weather}<br>
+              👥 <strong>Population :</strong> ${server.population}<br>
+              📶 <strong>Statut :</strong> ${server.status}
             </div>
           `;
 
@@ -144,7 +122,7 @@
     }
 
     loadServers();
-    setInterval(loadServers, 300000); // Rafraîchit toutes les 5 min
+    setInterval(loadServers, 300000); // toutes les 5 minutes
   </script>
 </body>
 </html>
