--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <script>
     async function loadServers() {
       try {
-        const response = await fetch("https://throneandliberty.gameslantern.com/api/server-status");
+        const response = await fetch("/.netlify/functions/getServers");
         const data = await response.json();
         const container = document.getElementById("servers");
         container.innerHTML = "";
